# max342x-usbd

./: Cargo.toml  README.md
src/: endpoint.rs  interface.rs  lib.rs  usbcore.rs
